# trishnexus-monorepo

./: .firebaserc  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  storage.rules  tsconfig.base.json  vercel.json
apps-desktop/trishadmin/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishadmin/src-tauri/capabilities/: default.json
apps-desktop/trishadmin/src-tauri/src/: creds.rs  db.rs  http_api.rs  lib.rs  main.rs  mtproto.rs  telegram.rs
apps-desktop/trishcheck/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishcheck/src-tauri/capabilities/: default.json
apps-desktop/trishcheck/src-tauri/icons/: icon.icns
apps-desktop/trishcheck/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishclean/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishclean/src-tauri/capabilities/: default.json
apps-desktop/trishclean/src-tauri/icons/: icon.icns
apps-desktop/trishclean/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishdesign/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishdesign/src-tauri/capabilities/: default.json
apps-desktop/trishdesign/src-tauri/icons/: icon.icns
apps-desktop/trishdesign/src-tauri/resources/: SRETC_HuHong.pat
apps-desktop/trishdesign/src-tauri/src/: acad_com.rs  lib.rs  main.rs
apps-desktop/trishdrive/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishdrive/src-tauri/capabilities/: default.json
apps-desktop/trishdrive/src-tauri/icons/: icon.icns
apps-desktop/trishdrive/src-tauri/src/: creds.rs  crypto.rs  db.rs  lib.rs  main.rs  mtproto.rs  telegram.rs  webdav.rs
apps-desktop/trishfinance/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishfinance/src-tauri/capabilities/: default.json
apps-desktop/trishfinance/src-tauri/icons/: icon.icns
apps-desktop/trishfinance/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishfont/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishfont/src-tauri/capabilities/: default.json
apps-desktop/trishfont/src-tauri/icons/: icon.icns
apps-desktop/trishfont/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishimage/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishimage/src-tauri/capabilities/: default.json
apps-desktop/trishimage/src-tauri/icons/: icon.icns
apps-desktop/trishimage/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishiso/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishiso/src-tauri/capabilities/: default.json
apps-desktop/trishiso/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishlauncher/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishlauncher/src-tauri/capabilities/: default.json
apps-desktop/trishlauncher/src-tauri/icons/: icon.icns
apps-desktop/trishlauncher/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishlibrary/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishlibrary/src-tauri/capabilities/: default.json
apps-desktop/trishlibrary/src-tauri/icons/: icon.icns
apps-desktop/trishlibrary/src-tauri/resources/: INSTALL-TOOLS.bat
apps-desktop/trishlibrary/src-tauri/resources/tessdata_best/: .gitkeep
apps-desktop/trishlibrary/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishnote/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishnote/src-tauri/capabilities/: default.json
apps-desktop/trishnote/src-tauri/icons/: icon.icns
apps-desktop/trishnote/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishoffice/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishoffice/src-tauri/capabilities/: default.json
apps-desktop/trishoffice/src-tauri/icons/: icon.icns
apps-desktop/trishoffice/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishsearch/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishsearch/src-tauri/capabilities/: default.json
apps-desktop/trishsearch/src-tauri/icons/: icon.icns
apps-desktop/trishsearch/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishshortcut/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishshortcut/src-tauri/capabilities/: default.json
apps-desktop/trishshortcut/src-tauri/icons/: icon.icns
apps-desktop/trishshortcut/src-tauri/src/: lib.rs  main.rs
apps-desktop/trishtype/src-tauri/: Cargo.toml  tauri.conf.json
apps-desktop/trishtype/src-tauri/capabilities/: default.json
apps-desktop/trishtype/src-tauri/icons/: icon.icns
apps-desktop/trishtype/src-tauri/src/: lib.rs  main.rs
apps/trishadmin/: pyproject.toml
apps/trishadmin/src/trishadmin/: app.py
apps/trishcheck/: pyproject.toml
apps/trishcheck/src/trishcheck/: app.py
apps/trishclean/: pyproject.toml
apps/trishclean/src/trishclean/: app.py
apps/trishdesign/: pyproject.toml
apps/trishdesign/src/trishdesign/: app.py
apps/trishfont/: README.md  pyproject.toml  tpack.toml
apps/trishfont/src/trishfont/: __init__.py  app.py
apps/trishimage/: pyproject.toml
apps/trishimage/src/trishimage/: app.py
apps/trishlauncher/: pyproject.toml
apps/trishlauncher/src/trishlauncher/: __init__.py  app.py  bootstrap.py
apps/trishlauncher/src/trishlauncher/ui/: hub_view.py
apps/trishlibrary/: pyproject.toml
apps/trishlibrary/src/trishlibrary/: app.py
apps/trishnote/: pyproject.toml
apps/trishnote/src/trishnote/: app.py
apps/trishsearch/: pyproject.toml
apps/trishsearch/src/trishsearch/: app.py
apps/trishtype/: pyproject.toml
apps/trishtype/src/trishtype/: app.py
design/: tokens.json  (+1 more)
shared/trishteam_core/: README.md  pyproject.toml
shared/trishteam_core/src/trishteam_core/: __init__.py
shared/trishteam_core/src/trishteam_core/auth/: __init__.py  firebase_client.py  login_dialog.py  manager.py  offline.py  role_guard.py  session.py  sso_handler.py  token_store.py
shared/trishteam_core/src/trishteam_core/crypto/: __init__.py  aes.py
shared/trishteam_core/tests/: conftest.py  test_export_tokens.py  test_firebase_client.py  test_login_dialog.py  test_offline.py  test_role_guard.py  test_session.py  test_sso_handler.py  test_theme_manager.py  test_theme_registry.py  test_token_store.py
(+927 files in other folders)
