[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishadmin"
version = "0.1.0"
description = "TrishAdmin — Quản lý quyền Administrator toàn bộ hệ sinh thái"
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
]

[project.scripts]
trishadmin = "trishadmin.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishadmin = ["resources/*.png", "resources/*.ico"]
