[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishcheck"
version = "0.1.0"
description = "TrishCheck — Kiểm tra cấu hình máy so với yêu cầu phần mềm"
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
]

[project.scripts]
trishcheck = "trishcheck.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishcheck = ["resources/*.png", "resources/*.ico"]
