[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishfont"
version = "0.1.0"
description = "TrishFont — Font library manager & preview tool (Vietnamese-friendly)."
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri77@gmail.com" }]

dependencies = [
  "trishteam-core",
]

[project.scripts]
trishfont = "trishfont.app:main"

[tool.setuptools.packages.find]
where = ["src"]
