[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishimage"
version = "0.1.0"
description = "TrishImage — Quản lý thư viện ảnh — local + cloud"
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
]

[project.scripts]
trishimage = "trishimage.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishimage = ["resources/*.png", "resources/*.ico"]
