[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishlauncher"
version = "0.1.0"
description = "TrishLauncher — hub launcher cho TrishNexus suite (auto-update, changelog, screenshots)."
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
  "requests>=2.31",
]

[project.scripts]
trishlauncher = "trishlauncher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishlauncher = [
  "resources/*.png",
  "resources/*.ico",
  "resources/logos/*.png",
]
