[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishnote"
version = "0.1.0"
description = "TrishNote — Ghi chú dự án, deadline, cá nhân, học tập"
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
]

[project.scripts]
trishnote = "trishnote.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishnote = ["resources/*.png", "resources/*.ico"]
