[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trishtype"
version = "0.1.0"
description = "TrishType — Trình soạn thảo mọi định dạng"
requires-python = ">=3.10"
authors = [{ name = "Hồ Sỹ Trí", email = "hosytri07@gmail.com" }]

dependencies = [
  "trishteam-core",
  "PyQt6>=6.6",
]

[project.scripts]
trishtype = "trishtype.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trishtype = ["resources/*.png", "resources/*.ico"]
