[package]
name = "trishadmin"
version = "1.0.0"
description = "TrishAdmin — admin tool cho hệ sinh thái TrishTEAM (manage users + keys + broadcasts + registry + TrishDrive)"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishadmin"
path = "src/main.rs"

[lib]
name = "trishadmin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# ============================================================
# Phase 24.1 — TrishDrive merged vào TrishAdmin (admin-only).
# Deps copy từ apps-desktop/trishdrive/src-tauri/Cargo.toml.
# ============================================================

# HTTP client cho Telegram Bot API + share API (trishteam.io.vn)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "sync"] }
# Phase 25.0.C — Parallel chunks upload Bot API
futures = "0.3"
# Phase 25.0.D — HTTP API external (Axum local server cho upload từ script)
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.10", features = ["v4"] }

# SQLite local cache index
rusqlite = { version = "0.31", features = ["bundled"] }

# AES-256-GCM encrypt file trước khi upload
aes-gcm = "0.10"
sha2 = "0.10"

# Credential store — Windows Credential Manager (DPAPI), keychain macOS, Secret Service Linux
keyring = "2.3"

# PBKDF2 derive AES key từ user passphrase
pbkdf2 = "0.12"
hmac = "0.12"

rand = "0.8"
hex = "0.4"

# Async traits cho upload/download pipeline
async-trait = "0.1"
anyhow = "1"
urlencoding = "2.1"

# MTProto cho file > 50MB Bot API limit
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
