[package]
name = "trishcheck"
version = "2.0.0-alpha.1"
description = "TrishCheck — hardware info + CPU/disk benchmark cho TrishTEAM"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishcheck"
path = "src/main.rs"

[lib]
name = "trishcheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
sha2 = "0.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
