[package]
name = "trishdesign"
version = "2.1.0"
description = "TrishDesign Phase 28 — Bộ công cụ Khảo sát & Thiết kế (vẽ hư hỏng mặt đường lên AutoCAD)"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishdesign"
path = "src/main.rs"

[lib]
name = "trishdesign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tiny_http = "0.12"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
# Phase 28.5 — Chatbot proxy → Claude API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# Phase 28.4.E — AutoCAD COM automation (Windows-only)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
