[package]
name = "trishdrive"
version = "0.1.0-alpha.1"
description = "TrishDrive — quản lý lưu trữ Cloud qua Telegram (TrishTEAM ecosystem)"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishdrive"
path = "src/main.rs"

[lib]
name = "trishdrive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP client cho Telegram Bot API (đơn giản, không cần MTProto cho MVP)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
# SQLite local cache index file (mỗi file lưu Telegram chat_id + message_id + filename + size)
rusqlite = { version = "0.31", features = ["bundled"] }
# AES-256-GCM encrypt file trước khi upload (Telegram bot có visibility tới file content)
aes-gcm = "0.10"
sha2 = "0.10"
# Credential store — Windows Credential Manager (DPAPI), keychain macOS, Secret Service Linux
keyring = "2.3"
# PBKDF2 derive AES key từ user passphrase
pbkdf2 = "0.12"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
# Async traits cho upload/download pipeline
async-trait = "0.1"
anyhow = "1"
# Phase 22 prep — TrishDrive MVP qua Telegram Bot API.
# Phase 23+: chuyển MTProto qua grammers-client = "0.6" để upload file > 50MB
# (giới hạn Bot API). MTProto cũng support download streaming tốt hơn.

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
