[package]
name = "trishfont"
version = "2.0.0-alpha.1"
description = "TrishFont — font manager với pair recommendation AI"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishfont"
path = "src/main.rs"

[lib]
name = "trishfont_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ttf-parser = "0.20"

[features]
custom-protocol = ["tauri/custom-protocol"]
