[package]
name = "trishimage"
version = "2.0.0-alpha.1"
description = "TrishImage — photo organizer với event/face grouping"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishimage"
path = "src/main.rs"

[lib]
name = "trishimage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
# EXIF parser pure-Rust, không cần libexif.
kamadak-exif = "0.5"
# Dimensions probe đọc ≤ 512 byte header, pure-Rust (JPEG/PNG/WebP/GIF/BMP…).
imagesize = "0.13"

[features]
custom-protocol = ["tauri/custom-protocol"]
