[package]
name = "trishimage"
version = "2.0.0-1"
description = "TrishImage — quản lý + tổ chức ảnh local với EXIF + thumbnail cache"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishimage"
path = "src/main.rs"

[lib]
name = "trishimage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
parking_lot = "0.12"
rayon = "1.10"
# EXIF parser pure-Rust, không cần libexif.
kamadak-exif = "0.5"
# Dimensions probe đọc ≤ 512 byte header (JPEG/PNG/WebP/GIF/BMP…).
imagesize = "0.13"
# Thumbnail generation — decode + resize + encode JPEG
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
# Phase 17.5 — Update check (fetch GitHub registry)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
