[package]
name = "trishiso"
version = "1.0.0"
description = "TrishISO — quản lý hồ sơ ISO + thiết bị nội bộ (TrishTEAM ecosystem)"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishiso"
path = "src/main.rs"

[lib]
name = "trishiso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
# Phase 22.4.A — Auto-update infrastructure (active:false trong tauri.conf.json
# tới khi Trí gen RSA key + ra lệnh release đồng loạt). Process plugin để
# restart sau khi cài update.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
