[package]
name = "trishlauncher"
version = "2.0.0-alpha.1"
description = "TrishLauncher — desktop launcher cho ecosystem TrishTEAM"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

# Desktop-only package cho Tauri 2.
[[bin]]
name = "trishlauncher"
path = "src/main.rs"

[lib]
name = "trishlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
# Cho phép dev mode mở devtools.
custom-protocol = ["tauri/custom-protocol"]
