[package]
name = "trishlauncher"
version = "1.0.0"
description = "TrishLauncher — desktop launcher cho ecosystem TrishTEAM"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

# Desktop-only package cho Tauri 2.
[[bin]]
name = "trishlauncher"
path = "src/main.rs"

[lib]
name = "trishlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Phase 14.5.5.d: bật feature `tray-icon` để dùng `tauri::tray::TrayIconBuilder`
# + `tauri::menu::{Menu, MenuItem}` built-in — không cần plugin ngoài.
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Phase 14.7.g: Rust-side HTTP fetch cho registry — bypass WebView CORS/CSP/redirect
# hoàn toàn. rustls-tls không cần OpenSSL (Windows build clean). webpki-roots
# bundled trong rustls đủ verify Let's Encrypt cert của Vercel.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
# Cho phép dev mode mở devtools.
custom-protocol = ["tauri/custom-protocol"]
