[package]
name = "trishsearch"
version = "2.0.0-1"
description = "TrishSearch — full-text search BM25 offline xuyên TrishNote + TrishLibrary + file text"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishsearch"
path = "src/main.rs"

[lib]
name = "trishsearch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2.5"
# Phase 17.3 — Update check (fetch GitHub registry)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
# Layer 2 — PDF text extraction (pure Rust, no FFI)
pdf-extract = "0.7"
# Layer 2 — XLSX/XLS reader
calamine = "0.26"
# Layer 2 — DOCX = ZIP + XML, parse manually
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
# Layer 1 — Concurrent index access
parking_lot = "0.12"
# Layer 1 — Parallel processing (file index)
rayon = "1.10"
# Layer 3 — OCR ảnh qua Tesseract subprocess (pdfium-render dời v2.0.1
# do crate 0.8.37 broken bindings; PDF scan OCR sẽ thêm sau với
# approach mutool/pdftoppm subprocess hoặc pdfium pinned version).

[features]
custom-protocol = ["tauri/custom-protocol"]
