[package]
name = "trishshortcut"
version = "1.0.0"
description = "TrishShortcut — quản lý shortcut Windows với icon hiển thị + workspace mode + hotkey toàn cục"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishshortcut"
path = "src/main.rs"

[lib]
name = "trishshortcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Tauri ecosystem 2.x — Cargo tự pick consistent generation.
# Plugin Rust crates pin major.minor MATCH NPM packages tương ứng:
#   plugin-dialog NPM 2.7.x → Rust ~2.7
#   plugin-opener NPM 2.5.x → Rust ~2.5
#   plugin-global-shortcut NPM 2.3.x → Rust ~2.3
# Bump tauri lên 2 broad để Cargo pick latest tương thích plugin generations.
[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "~2.7"
tauri-plugin-opener = "~2.5"
tauri-plugin-global-shortcut = "~2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
# Phase 36.5 — Machine ID cho key concurrent control
trishteam-machine-id = { path = "../../../packages/machine-id" }

# Phase 32.3 — Icon extraction (Windows ExtractIconEx) + scan + lnk parsing
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }
lnk = "0.5"
winreg = "0.52"
dirs = "5"
# Phase 32.3.B — extract icon dùng PowerShell System.Drawing.Icon
# (không dùng systemicons vì conflict gtk-sys với tauri-plugin-dialog 2.0)

[features]
custom-protocol = ["tauri/custom-protocol"]
