[package]
name = "trishtype"
version = "2.0.0-1"
description = "TrishType — trình soạn thảo văn bản chuyên nghiệp + converter đa format"
authors = ["TrishTEAM <hosytri77@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "trishtype"
path = "src/main.rs"

[lib]
name = "trishtype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
parking_lot = "0.12"
# Font family extraction (Name table parser) — scan system fonts trên Windows
ttf-parser = "0.24"
# Update check
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
